--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.4.0"
   }
